--- a/index.html
+++ b/index.html
@@ -1,13 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+  <title>Folder Structure Visualizer</title>
+
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.12/themes/default/style.min.css">
+  <link rel="stylesheet"
+        href="/style.css">
+  <link rel='stylesheet'
+        href='/src/treejs.css'>
+</head>
+
+<body class="section">
+  <div class="container">
+    <h1 class="title is-3">Folder Structure Visualizer</h1>
+    <textarea id="folderInput"
+              class="textarea mb-4"
+              rows="10"
+              placeholder="Enter folder structure here..."></textarea>
+    <div class="buttons">
+      <button id="visualizeBtn"
+              class="button is-primary">Visualize</button>
+      <button id="exportImgBtn"
+              class="button is-success">Export as Image</button>
+      <button id="exportTxtBtn"
+              class="button is-warning">Export as Text</button>
+      <button id="generateScriptBtn"
+              class="button is-danger">Generate Script</button>
+    </div>
+    <div id="outputContainer"
+         class="box mt-4">
+      <div id="folderTree"></div>
+    </div>
+  </div>
+  <div id="contextMenu"
+       class="menu"
+       style="display:none; position:absolute;">
+    <p class="menu-label">Actions</p>
+    <ul class="menu-list">
+      <li><a id="renameNode"><i class="fas fa-edit"></i> Rename</a></li>
+      <li><a id="moveNode"><i class="fas fa-arrows-alt"></i> Move</a></li>
+      <li><a id="nestNode"><i class="fas fa-level-down-alt"></i> Nest</a></li>
+      <li><a id="deleteNode"><i class="fas fa-trash"></i> Delete</a></li>
+      <li><a id="createNode"><i class="fas fa-plus"></i> Create</a></li>
+      <li><a id="cloneNode"><i class="fas fa-clone"></i> Clone</a></li>
+    </ul>
+  </div>
+
+  <script src='/src/tree.js'></script>
+  <script type="module"
+          src="/src/main.js"></script>
+</body>
+
 </html>
